SLT_Handler/Include/MMC/MMCWFP39.h

INT API set_friction_gain(INT axis, LONG gain);
INT API fset_friction_gain(INT axis, LONG gain);
INT API get_friction_gain(INT axis, pLONG gain);
INT API fget_friction_gain(INT axis, pLONG gain);
INT API set_friction_range(INT axno, double range);
INT API fset_friction_range(INT axno, double range);
INT API get_friction_range(INT axno, pDOUBLE range);
INT API fget_friction_range(INT axno, pDOUBLE range);
INT API set_system_io(INT ax, INT onoff);
INT API get_system_io(INT ax, pINT onoff);
INT API set_amp_resolution32(INT ax, LONG resolution);
INT API fset_amp_resolution32(INT ax, LONG resolution);
INT API get_amp_resolution32(INT ax, pLONG resolution);
INT API fget_amp_resolution32(INT ax, pLONG resolution);
INT API set_collision_prevent_ax(INT ax, INT enable, INT slave_ax, INT add_sub, INT non_equal, double c_pos, INT type);
INT API get_collision_prevent_ax(INT ax, pINT enable);
INT API set_sync_control_ax(INT ax, INT enable, INT master_ax, LONG gain);
INT API get_sync_control_ax(INT ax, pINT enable, pINT master_ax, pLONG gain);
INT API set_pause_control(INT bn, INT enable, long io_bit);