SLT_Handler/Include/MMC/MMCWFP39.pas


 Function set_friction_gain ( axis:Smallint;  gain : Longint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function fset_friction_gain ( axis:Smallint;  gain : Longint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function get_friction_gain ( axis:Smallint;  plgain:pointer): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function fget_friction_gain ( axis:Smallint;  plgain:pointer): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function set_friction_range ( axno:Smallint;  range :Double): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function fset_friction_range ( axno:Smallint;  range :Double): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function get_friction_range ( axno:Smallint;  pdrange:pointer): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function fget_friction_range ( axno:Smallint;  pdrange:pointer): Smallint ;     stdcall;   external    'MMCWFP39.DLL';

 Function set_system_io( ax:Smallint; onoff:Smallint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function get_system_io( ax:Smallint; pionoff:pointer): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function set_amp_resolution32( ax:Smallint; resolution:Longint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function fset_amp_resolution32( ax:Smallint; resolution:Longint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function get_amp_resolution32( ax:Smallint; plresolution:pointer): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function fget_amp_resolution32( ax::Smallint; plresolution:pointer): Smallint ;     stdcall;   external    'MMCWFP39.DLL';

 Function set_collision_prevent_ax( ax:Smallint; enable:Smallint;  slave_ax:Smallint;  add_sub:Smallint;  non_equal:Smallint;  c_pos:Double;  mtype:Smallint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function get_collision_prevent_ax( ax:Smallint; pienable:pointer): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function set_sync_control_ax( ax:Smallint;  enable:Smallint;  master_ax:Smallint;  gain: Longint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';
 Function get_sync_control_ax( ax:Smallint; pienable:pointer; pimaster_ax:pointer; plgain:pointer): Smallint ;     stdcall;   external    'MMCWFP39.DLL';

 Function set_pause_control( bn:Smallint; enable:Smallint; io_bit: Longint): Smallint ;     stdcall;   external    'MMCWFP39.DLL';

implementation

end.

